Performance Improvement for Documents, Interval Adjustements, Adjustements for UI Logic and Various Fixes (#483)