@@ -19,7 +19,6 @@ package org.polypheny.db.sql.language.ddl.altertable;
 
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import org.polypheny.db.catalog.entity.logical.LogicalTable;
 import org.polypheny.db.catalog.exceptions.GenericRuntimeException;
 import org.polypheny.db.catalog.logistic.EntityType;
@@ -94,8 +93,9 @@ public class SqlAlterTableAddUniqueConstraint extends SqlAlterTable {
 
         DdlManager.getInstance().createUniqueConstraint(
                 logicalTable,
-                columnList.getList().stream().map( Node::toString ).collect( Collectors.toList() ),
-                constraintName.getSimple() );
+                columnList.getList().stream().map( Node::toString ).toList(),
+                constraintName.getSimple(),
+                statement );
     }
 
 }
